<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/menu_favorites"
            android:icon="@drawable/ds_heart_outlined"
            android:title="@string/favorites_menu"
            app:showAsAction="never"
            app:iconTint="@android:color/black"
            />

        <item
            android:id="@+id/menu_notifications"
            android:icon="@drawable/ds_icon_notification"
            android:title="@string/notifications_menu"
            app:showAsAction="never"
            app:iconTint="@android:color/black" />
    </group>

    <group android:id="@+id/group_logout">
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ds_icon_logout"
            android:title="@string/logout_menu"
            app:showAsAction="never"
            app:iconTint="@android:color/black" />
    </group>

</menu>
