<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen_view_filters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".presentation.view.FiltersActivity">

    <com.example.mylibrary.ds.toolbar.DsToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="24dp">

            <com.example.mylibrary.ds.text.DsText
                android:id="@+id/titleOrdering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filters_ordering"
                app:dsTextStyle="description"
                app:dsFontWeight="medium"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipsOrdering"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:chipSpacingHorizontal="10dp"
                app:chipSpacingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/titleOrdering"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrderingPublishedAt"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_ordering_published_at"
                    android:checkable="true"
                    android:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrderingPopularity"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_ordering_popularity"
                    android:checkable="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipOrderingRelevance"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_ordering_relevance"
                    android:checkable="true"/>
            </com.google.android.material.chip.ChipGroup>

            <com.example.mylibrary.ds.text.DsText
                android:id="@+id/titlePeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/filters_period"
                app:dsFontWeight="medium"
                android:textSize="14sp"
                app:dsTextStyle="description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipsOrdering" />

            <com.example.mylibrary.ds.input.DsInput
                android:id="@+id/inputStartDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/filters_start_date_hint"
                app:inputKeyboardType="text"
                app:layout_constraintTop_toBottomOf="@id/titlePeriod"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.example.mylibrary.ds.input.DsInput
                android:id="@+id/inputEndDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/filters_end_date_hint"
                app:inputKeyboardType="text"
                app:layout_constraintTop_toBottomOf="@id/inputStartDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.example.mylibrary.ds.text.DsText
                android:id="@+id/titleCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/filters_category"
                android:textSize="14sp"
                app:dsFontWeight="medium"
                app:dsTextStyle="description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputEndDate" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipsCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:chipSpacingHorizontal="10dp"
                app:chipSpacingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/titleCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoryGeneral"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_category_general"
                    android:checkable="true"
                    android:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoryBusiness"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_category_business"
                    android:checkable="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoryTech"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_category_tech"
                    android:checkable="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategorySports"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_category_sports"
                    android:checkable="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoryHealth"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_category_health"
                    android:checkable="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCategoryScience"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_category_science"
                    android:checkable="true"/>
            </com.google.android.material.chip.ChipGroup>

            <com.example.mylibrary.ds.text.DsText
                android:id="@+id/titleLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/filters_language"
                android:textSize="14sp"
                app:dsFontWeight="medium"
                app:dsTextStyle="description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipsCategory" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipsLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:singleSelection="true"
                app:selectionRequired="true"
                app:chipSpacingHorizontal="10dp"
                app:chipSpacingVertical="10dp"
                app:layout_constraintTop_toBottomOf="@id/titleLanguage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLangPt"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_language_pt"
                    android:checkable="true"
                    android:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLangEn"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_language_en"
                    android:checkable="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipLangEs"
                    style="@style/Widget.Material3.Chip.Assist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filters_language_es"
                    android:checkable="true"/>
            </com.google.android.material.chip.ChipGroup>

            <com.example.mylibrary.ds.button.DsButton
                android:id="@+id/buttonApply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipsLanguage"
                app:textDS="@string/filters_button_apply" />

            <com.example.mylibrary.ds.button.DsButton
                android:id="@+id/buttonClear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:textDS="@string/filters_button_clear"
                app:buttonType="text"
                app:layout_constraintTop_toBottomOf="@id/buttonApply"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
