<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.DetailsNewsActivity">

    <com.example.mylibrary.ds.toolbar.DsToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/details_news_image_accessibility"
        android:src="@drawable/img_details_news"
        android:importantForAccessibility="yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:importantForAccessibility="no"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <ImageView
            android:id="@+id/icFavoriteButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/details_news_favorite_button_accessibility"
            android:focusable="true"
            android:src="@drawable/selector_favorite" />

        <ImageView
            android:id="@+id/icShareButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="21dp"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/details_news_share_button_accessibility"
            android:src="@drawable/ic_share" />
    </LinearLayout>

    <com.example.mylibrary.ds.text.DsText
        android:id="@+id/detailsNewsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="14dp"
        android:text="@string/details_news_text_title"
        android:importantForAccessibility="yes"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.example.mylibrary.ds.text.DsText
        android:id="@+id/detailsNewsDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:importantForAccessibility="yes"
        android:text="@string/details_news_text_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsNewsTitle" />

    <com.example.mylibrary.ds.text.DsText
        android:id="@+id/detailsNewsAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:importantForAccessibility="yes"
        android:text="@string/details_news_text_author"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsNewsDate"/>

    <com.example.mylibrary.ds.text.DsText
        android:id="@+id/detailsNewsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:importantForAccessibility="yes"
        android:text="@string/details_news_text_description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsNewsAuthor"/>


</androidx.constraintlayout.widget.ConstraintLayout>